Fix dark mode

--- a/frontend-service/src/_styles/_primeReact.scss
+++ b/frontend-service/src/_styles/_primeReact.scss
@@ -538,8 +538,8 @@ body .p-slider:not(.p-disabled) .p-slider-handle:hover {
 body .p-datepicker {
   padding: 0.857em;
   min-width: 20em;
-  background-color: #ffffff;
-  color: #404040;
+  background-color: var(--bg);
+  color: var(--main-font-color);
   border: 1px solid #a6a6a6;
   -moz-border-radius: 3px;
   -webkit-border-radius: 3px;
@@ -556,14 +556,14 @@ body .p-datepicker:not(.p-disabled) .p-datepicker-header .p-datepicker-next:hove
   color: #004494;
 }
 body .p-datepicker:not(.p-disabled) table td span:not(.p-highlight):not(.p-disabled):hover {
-  background-color: #eaeaea;
+  background-color: var(--bg);
 }
 body .p-datepicker:not(.p-disabled) .p-monthpicker .p-monthpicker-month:not(.p-highlight):hover {
-  background-color: #eaeaea;
+  background-color: var(--bg);
 }
 body .p-datepicker .p-datepicker-header {
   padding: 0.429em 0.857em 0.429em 0.857em;
-  background-color: #ffffff;
+  background-color: var(--bg);
   color: #404040;
   -moz-border-radius: 0;
   -webkit-border-radius: 0;
@@ -573,7 +573,7 @@ body .p-datepicker .p-datepicker-header .p-datepicker-prev,
 body .p-datepicker .p-datepicker-header .p-datepicker-next {
   cursor: pointer;
   top: 0;
-  color: #a6a6a6;
+  color: var(--main-font-color);
   -moz-transition: color 0.2s, box-shadow 0.2s;
   -o-transition: color 0.2s, box-shadow 0.2s;
   -webkit-transition: color 0.2s, box-shadow 0.2s;
@@ -601,7 +601,7 @@ body .p-datepicker table td {
 body .p-datepicker table td > span {
   display: block;
   text-align: center;
-  color: #404040;
+  color: var(--main-font-color);
   cursor: pointer;
   padding: 0.5em;
   -moz-border-radius: 3px;
